--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,23 +4,22 @@ name: EC2 auto deploy
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      
-      # Deploy
       - name: Deploy
-        run: |
-          echo "${{ secrets.PRIVATE_KEY }}" > private_key
-          chmod 600 private_key
-          ssh -oStrictHostKeyChecking=no ${{ secrets.USER_NAME }}@${{ secrets.HOST_NAME }} -i private_key "cd /home/ec2-user/stock_app && git fetch github:wisk-env/stock_app.git && git pull github:wisk-env/stock_app.git"
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_NAME }}
+          username: ${{ secrets.USER_NAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          script: |
+            cd ${{ secrets.SERVER_DEPLOY_DIR }}
+            git pull origin main
