--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           host: ${{ secrets.HOST_NAME }}
           username: ${{ secrets.USER_NAME }}
+          port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
             cd ${{ secrets.SERVER_DEPLOY_DIR }}
