GitHub ActionsのワークフローでEC2に自動デプロイ アプリのディレクトリを絶対パスで指定

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
           echo "${{ secrets.PRIVATE_KEY }}" > private_key
           chmod 600 private_key
           ssh -oStrictHostKeyChecking=no ${{ secrets.USER_NAME }}@${{ secrets.HOST_NAME }} -i private_key
-          cd stock_app && git pull origin main
+          cd /home/ec2-user/stock_app && git pull origin main
 
       - name: revoke Security Group
         run: |
