GitHub ActionsのワークフローでEC2に自動デプロイ テスト5

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
           ssh -oStrictHostKeyChecking=no ${{ secrets.USER_NAME }}@${{ secrets.HOST_NAME }} -i private_key
           echo "hello world" > test.txt
           cat test.txt
-          cd /home/ec2-user/ && git pull origin main
+          git pull origin main
 
       - name: revoke Security Group
         run: |
