--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,6 @@ jobs:
         id: ip
         uses: haythem/public-ip@v1.2
       
-      - name: Checkout
-        uses: actions/checkout@v2
-
       - name: AWS CLI install
         run: |
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
@@ -38,6 +35,9 @@ jobs:
       - name: Security Group ingress
         run: |
           aws ec2 authorize-security-group-ingress --group-id ${{ secrets.SECURITY_GROUP_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
+      
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Deploy
         run: |
@@ -47,6 +47,8 @@ jobs:
           ssh -oStrictHostKeyChecking=no ${{ secrets.USER_NAME }}@${{ secrets.HOST_NAME }} -i private_key
           echo "hello world" > test.txt
           cat test.txt
+          pwd
+          cd /home/ec2-user/stock_app
           pwd
           git pull origin main
 
