--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Public IP Install
         id: ip
         uses: haythem/public-ip@v1.2
+
+      - name: Checkout
+        uses: actions/checkout@v3
       
       - name: AWS CLI install
         run: |
@@ -37,7 +40,6 @@ jobs:
           aws ec2 authorize-security-group-ingress --group-id ${{ secrets.SECURITY_GROUP_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
       
       - name: Deploy
-        uses: actions/checkout@v2
         run: |
           # EC2作成時の公開鍵をGitHubに登録
           echo "${{ secrets.PRIVATE_KEY }}" > private_key
