--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,9 +44,10 @@ jobs:
           # EC2作成時の公開鍵をGitHubに登録
           echo "${{ secrets.PRIVATE_KEY }}" > private_key
           chmod 600 private_key
-          ssh -oStrictHostKeyChecking=no ${{ secrets.USER_NAME }}@${{ secrets.HOST_NAME }} -t -i private_key && cd /home/ec2-user/stock_app && git fetch --prune && git checkout main && git pull origin main
+          ssh -oStrictHostKeyChecking=no ${{ secrets.USER_NAME }}@${{ secrets.HOST_NAME }} -i private_key
           echo "hello world" > test.txt
           cat test.txt
+          cd /home/ec2-user/stock_app && git fetch --prune && git checkout main && git pull origin main
           pwd
 
       - name: revoke Security Group
