GitHub ActionsのワークフローでEC2に自動デプロイ テスト16

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
       - name: Public IP Install
         id: ip
         uses: haythem/public-ip@v1.2
+
+      - name: checkout
+        uses: actions/checkout@v2
       
       - name: AWS CLI install
         run: |
@@ -39,12 +41,10 @@ jobs:
       
       - name: Deploy
         run: |
-          # EC2作成時の公開鍵をGitHubに登録
+          # EC2作成時の公開鍵をGitHubに登録済み
           echo "${{ secrets.PRIVATE_KEY }}" > private_key
           chmod 600 private_key
-          ssh -oStrictHostKeyChecking=no ${{ secrets.USER_NAME }}@${{ secrets.HOST_NAME }} -i private_key
-          cd /home/ec2-user/stock_app && git checkout main && git pull origin main
-          pwd
+          ssh -oStrictHostKeyChecking=no ${{ secrets.USER_NAME }}@${{ secrets.HOST_NAME }} -i private_key "cd /home/ec2-user/stock_app && git pull origin main"
 
       - name: revoke Security Group
         run: |
