--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,4 +1,4 @@
-name: Run rspec, rubocop
+name: Rspec
 
 on:
   push:
@@ -8,45 +8,34 @@ jobs:
   rspec:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    services:
-      mysql:
-        image: mysql:8.0
-        ports:
-          - 3306:3306
-        env:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-        options: --health-cmd "mysqladmin ping" --health-interval 10s --health-timeout 5s --health-retries 10
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+    - name: Setup Ruby Version
+      uses: actions/setup-ruby@master
+      with:
+        ruby-version: 2.7.x
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          bundler-cache: true
+    - name: Install dependent libralies
+      run: sudo apt-get install libmysqlclient-dev
 
-      - name: Cache node modules
-        uses: actions/cache@v2
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+    - name: Setup bundler
+      run: gem install bundler
 
-      - name: Bundler and gem install
-        run: |
-          gem install bundler
-          bundle install --jobs 4 --retry 3 --path vendor/bundle
+    - name: bundle install
+      run: |
+        bundle install --jobs 4 --retry 3
 
-      - name: Yarn install
-        run: yarn install --check-files
+    - name: Setup Database
+      run: |
+        cp config/database.yml.ci config/database.yml
+        sudo systemctl start mysql
+        bundle exec rails db:create
+        bundle exec rails db:schema:load
+      env:
+        RAILS_ENV: test
 
-      - name: Database create and migrate
-        run: |
-          cp config/database.yml.ci config/database.yml
-          bundle exec rails db:create RAILS_ENV=test
-          bundle exec rails db:migrate RAILS_ENV=test
-
-      - name: Run rspec
-        run: bundle exec rspec
+    - name: Run RSpec
+      run: bundle exec rspec
+      env: 
+        RAILS_ENV: test
