--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Setup Ruby Version
       uses: actions/setup-ruby@master
       with:
-        ruby-version: 2.6.x
+        ruby-version: 2.7.6
 
     - name: Install dependent libralies
       run: sudo apt-get install libmysqlclient-dev
