--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -5,6 +5,53 @@ on:
   pull_request:
 
 jobs:
+  rspec-test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
+        with:
+          ruby-version: 2.6
+
+      - name: check Ruby version
+        run: ruby -v
+
+      - name: check dirctory
+        run: |
+          pwd
+          bundler -v
+
+      - name: sqlite3 install
+        run: |
+          sudo apt install libsqlite3-dev
+          gem install sqlite3 -v '1.4.2' --source 'https://rubygems.org/'
+          dpkg -L libsqlite3-dev
+
+      - name: Cache gems
+        uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-gems-
+
+      - name: Install dependencies
+        run: |
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
+
+      - name: database setup
+        run: |
+          mv config/database.org config/database.yml
+          mv config/secrets.org config/secrets.yml
+          bundle exec rails db:migrate RAILS_ENV=test
+
+      - name: run Rspec
+        run: bundle exec rspec
+
   rubocop:
     runs-on: ubuntu-latest
     timeout-minutes: 10
