ワークフローファイル修正

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -45,8 +45,8 @@ jobs:
 
       - name: database setup
         run: |
-          mv config/database.org config/database.yml
-          mv config/secrets.org config/secrets.yml
+          cp config/database.yml.ci config/database.yml
+          bundle exec rails db:create RAILS_ENV=test
           bundle exec rails db:migrate RAILS_ENV=test
 
       - name: run Rspec
