ワークフローファイル修正

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -46,6 +46,9 @@ jobs:
       - name: database setup
         run: |
           cp config/database.yml.ci config/database.yml
+
+      - name: database create and migrate
+        run: |
           bundle exec rails db:create RAILS_ENV=test
           bundle exec rails db:migrate RAILS_ENV=test
 
